Fix #120920: Can not edit strokes/points when materials array is empty

Return entire points/curves range if object has no material.

Pull Request: https://projects.blender.org/blender/blender/pulls/120923